--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,15 +2,15 @@
 <resources>
     <color name="tx_green">#5C8447</color>
     <color name="tx_red">#AC2527</color>
-    <color name="tx_pending">#4c4c4c</color>
+    <color name="tx_pending">#e2e2e2</color>
     <color name="tx_failed">#FF80AB</color>
 
-    <color name="moneroOrange">#ff6600</color>
-    <color name="moneroWhite">#ffffff</color>
+    <color name="moneroOrange">#cc5100</color>
+    <color name="moneroWhite">#e2e2e2</color>
     <color name="moneroBlack">#000000</color>
     <color name="moneroGray">#4c4c4c</color>
 
-    <color name="colorPrimary">#ff6600</color>
+    <color name="colorPrimary">#cc5100</color>
     <color name="colorPrimaryDark">#61221A</color>
     <color name="textColorPrimary">#dcdcdc</color>
     <color name="windowBackground">#ffffff</color>
