--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="colorAccent">#009ADA</color>
 
     <color name="anotherColor">#F8CC5A</color>
+
+    <color name="white">#ffffff</color>
 </resources>
