--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -1,26 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_info"
+        android:id="@+id/action_lincense_info"
         android:icon="@drawable/ic_info_black_24dp"
-        android:title="@string/menu_info" />
-
-    <item
-        android:id="@+id/action_receive"
-        android:icon="@drawable/ic_monero_qr_24dp"
-        android:title="@string/menu_receive" />
-
-    <item
-        android:id="@+id/action_rename"
-        android:title="@string/menu_rename" />
-
-    <item
-        android:id="@+id/action_backup"
-        android:title="@string/menu_backup" />
-
-    <item
-        android:id="@+id/action_archive"
-        android:title="@string/menu_archive" />
+        android:orderInCategory="100"
+        android:title="@string/menu_about"
+        app:showAsAction="never" />
 
 </menu>
