--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -19,7 +19,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
+        <com.m2049r.xmrwallet.layout.InstantAutoComplete
             android:id="@+id/etDaemonAddress"
             style="@style/MoneroEdit"
             android:layout_width="0dp"
