--- a/app/src/main/res/layout/help_fragment.xml
+++ b/app/src/main/res/layout/help_fragment.xml
@@ -6,30 +6,21 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/licensesFragmentIcon"
+        android:id="@+id/helpFragmentIcon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         android:padding="8sp"/>
 
-    <TextView
-        android:id="@+id/licensesFragmentText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_text"
-        android:layout_below="@+id/licensesFragmentIcon"
-        android:gravity="center"
-        android:layout_marginBottom="8sp"/>
-
     <WebView
-        android:id="@+id/licensesFragmentWebView"
+        android:id="@+id/helpFragmentWebView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/licensesFragmentText"
+        android:layout_below="@+id/helpFragmentIcon"
         android:visibility="invisible" />
 
     <ProgressBar
-        android:id="@+id/licensesFragmentIndeterminateProgress"
+        android:id="@+id/helpFragmentProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
