--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,71 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8sp">
+    android:layout_margin="8sp"
+    android:orientation="vertical">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <EditText
+        android:id="@+id/etDummy"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="@string/label_daemon">
 
-        <EditText
-            android:id="@+id/etDummy"
-            android:layout_width="0dp"
-            android:layout_height="0dp" />
-
-        <android.support.design.widget.TextInputLayout
+        <com.m2049r.xmrwallet.layout.DropDownEditText
+            android:id="@+id/etDaemonAddress"
+            style="@style/MoneroEdit.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="@string/label_daemon">
+            android:gravity="start"
+            android:hint="@string/prompt_daemon"
+            android:imeOptions="actionDone"
+            android:inputType="textWebEmailAddress|textNoSuggestions"
+            android:maxLines="1"
+            android:textIsSelectable="true" />
+    </android.support.design.widget.TextInputLayout>
 
-            <com.m2049r.xmrwallet.layout.DropDownEditText
-                android:id="@+id/etDaemonAddress"
-                style="@style/MoneroEdit.Small"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:hint="@string/prompt_daemon"
-                android:imeOptions="actionDone"
-                android:inputType="textWebEmailAddress|textNoSuggestions"
-                android:maxLines="1"
-                android:textIsSelectable="true" />
-        </android.support.design.widget.TextInputLayout>
+    <TextView
+        style="@style/MoneroLabel.Heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="8sp"
+        android:text="@string/label_login_wallets" />
 
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            style="@style/MoneroLabel.Heading"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="8sp"
-            android:text="@string/label_login_wallets" />
-
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <ImageView
-                android:id="@+id/ivGuntherWallets"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/gunther_wallets_00" />
-
-            <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:paddingBottom="72dp"
-                app:layoutManager="LinearLayoutManager"
-                tools:listitem="@layout/item_wallet" />
-        </FrameLayout>
-    </LinearLayout>
+                android:adjustViewBounds="true"
+                android:padding="48dp"
+                android:src="@drawable/gunther_desaturated" />
+        </ScrollView>
 
-    <include layout="@layout/layout_fabmenu" />
+        <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="72dp"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/item_wallet" />
 
-</FrameLayout>
+        <include layout="@layout/layout_fabmenu" />
+    </FrameLayout>
+</LinearLayout>
