mnemonic left aligned

--- a/app/src/main/res/layout/fragment_generate.xml
+++ b/app/src/main/res/layout/fragment_generate.xml
@@ -69,7 +69,7 @@
                 android:hint="@string/generate_mnemonic_hint"
                 android:imeOptions="actionNext"
                 android:inputType="textMultiLine"
-                android:textAlignment="center" />
+                android:textAlignment="textStart" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
