--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -61,7 +61,7 @@
                 android:paddingEnd="4dp"
                 android:paddingStart="4dp"
                 android:paddingTop="0dp"
-                tools:listitem="@layout/item_spinner" />
+                tools:listitem="@layout/item_spinner_balance" />
         </LinearLayout>
 
         <TextView
