--- a/app/src/main/res/layout/view_exchange.xml
+++ b/app/src/main/res/layout/view_exchange.xml
@@ -3,84 +3,97 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <com.m2049r.xmrwallet.layout.CTextInputLayout
-        android:id="@+id/etAmount"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        app:counterEnabled="false"
-        app:errorEnabled="true">
+        android:layout_marginStart="4dp"
+        android:orientation="horizontal">
 
-        <android.support.design.widget.TextInputEditText
-            style="@style/MoneroEdit"
+        <Spinner
+            android:id="@+id/sCurrencyA"
+            android:layout_width="56sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:entries="@array/currency"
+            android:gravity="center"
+            android:textAlignment="center" />
+
+        <com.m2049r.xmrwallet.layout.CTextInputLayout
+            android:id="@+id/etAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
-            android:hint="@string/receive_amount_hint"
-            android:imeOptions="actionDone"
-            android:inputType="numberDecimal"
+            android:layout_marginStart="16dp"
+            app:counterEnabled="false"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                style="@style/MoneroEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:hint="@string/receive_amount_hint"
+                android:imeOptions="actionDone"
+                android:inputType="numberDecimal"
+                tools:text="87.00000" />
+
+        </com.m2049r.xmrwallet.layout.CTextInputLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/sCurrencyB"
+            style="@style/MoneroSpinnerGray"
+            android:layout_width="56sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:entries="@array/currency"
+            android:gravity="center"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/tvAmountB"
+            style="@style/MoneroText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|start"
+            android:layout_marginStart="16dp"
+            android:layout_weight="3"
+            android:padding="4dp"
+            android:singleLine="true"
+            android:text="--"
             tools:text="87.00000" />
 
-    </com.m2049r.xmrwallet.layout.CTextInputLayout>
-
-    <Spinner
-        android:id="@+id/sCurrencyA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="4dp"
-        android:entries="@array/currency"
-        android:gravity="center"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
-        android:textAlignment="center" />
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginEnd="0sp"
-        android:layout_marginStart="8sp">
-
-        <ImageView
-            android:id="@+id/evExchange"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_traffic" />
+            android:layout_marginEnd="0sp"
+            android:layout_marginStart="8sp">
 
-        <ProgressBar
-            android:id="@+id/pbExchange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:visibility="invisible" />
-    </FrameLayout>
+            <ImageView
+                android:id="@+id/evExchange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_traffic" />
 
-    <TextView
-        android:id="@+id/tvAmountB"
-        style="@style/MoneroText"
-        android:layout_width="0sp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|end"
-        android:layout_weight="3"
-        android:singleLine="true"
-        android:text="--"
-        android:textAlignment="textEnd"
-        tools:text="87.00000" />
+            <ProgressBar
+                android:id="@+id/pbExchange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:visibility="invisible" />
+        </FrameLayout>
 
-    <Spinner
-        android:id="@+id/sCurrencyB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="4dp"
-        android:entries="@array/currency"
-        android:gravity="center"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
-        android:textAlignment="center" />
+    </LinearLayout>
 
 </merge>
 
