--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,11 +56,7 @@
         <item name="android:textColor">@color/moneroGray</item>
     </style>
 
-    <style name="MoneroLabel.Caps.Stealth">
-        <item name="android:textColor">@color/moneroFab</item>
-    </style>
-
-    <style name="MoneroLabel.Caps.Stealth.Small">
+    <style name="MoneroLabel.Caps.Gray.Small">
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -249,6 +245,16 @@
     </style>
 
 
+    <style name="MoneroTextAppearanceSpinnerItemGray" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
+        <item name="android:textColor">@color/moneroGray</item>
+    </style>
 
+    <style name="MoneroSpinnerGray" parent="@style/Widget.AppCompat.Spinner">
+        <item name="android:background">@drawable/backgound_spinner_gray</item>
+    </style>
+
+    <style name="MoneroSpinnerItemGray" parent="android:Widget.TextView.SpinnerItem">
+        <item name="android:textAppearance">@style/MoneroTextAppearanceSpinnerItemGray</item>
+    </style>
 
 </resources>
