help & new exchange icon

--- a/app/src/main/res/layout/view_exchange.xml
+++ b/app/src/main/res/layout/view_exchange.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_traffic" />
+                android:src="@drawable/ic_statsup" />
 
             <ProgressBar
                 android:id="@+id/pbExchange"
