--- a/app/src/main/res/menu/create_wallet_new.xml
+++ b/app/src/main/res/menu/create_wallet_new.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_create_help"
+        android:id="@+id/action_create_help_new"
         android:icon="@drawable/ic_help_white_24dp"
         android:orderInCategory="100"
         android:title="@string/menu_help"
