--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -109,15 +109,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:text="@string/generate_mnemonic_label" />
-
-            <ImageButton
-                android:id="@+id/bCopySeed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginEnd="80dp"
-                android:background="?android:selectableItemBackground"
-                android:src="@drawable/ic_content_nocopy_black_24dp" />
         </FrameLayout>
 
         <TextView
@@ -155,6 +146,7 @@
             android:id="@+id/llAdvancedInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
             android:layout_marginTop="@dimen/section_top"
             android:orientation="vertical"
             android:visibility="gone">
@@ -199,15 +191,6 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:text="@string/generate_spendkey_label" />
-
-                <ImageButton
-                    android:id="@+id/bCopySepndKey"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="80dp"
-                    android:background="?android:selectableItemBackground"
-                    android:src="@drawable/ic_content_nocopy_black_24dp" />
             </FrameLayout>
 
             <TextView
