--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
 
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="logo_width">129dp</dimen>
+
     <dimen name="event_title_text_size">@dimen/abc_text_size_title_material_toolbar</dimen>
 
     <dimen name="header_top_first">12sp</dimen>
