--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -100,7 +100,8 @@
                 android:layout_marginStart="8sp"
                 android:background="?android:selectableItemBackground"
                 android:drawableTop="@drawable/ic_settings_orange_24dp"
-                android:text="@string/send_generate_paymentid_hint" />
+                android:text="@string/send_generate_paymentid_hint"
+                android:textColor="@color/moneroGray" />
         </LinearLayout>
 
         <LinearLayout
