--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:paddingEnd="16sp"
+    android:paddingStart="16sp"
+    android:paddingTop="8sp">
 
-    <ImageView
-        android:id="@+id/helpFragmentIcon"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
-        android:padding="8sp"/>
+        android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/helpFragmentWebView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/helpFragmentIcon"
-        android:visibility="invisible" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:src="@mipmap/ic_launcher" />
 
-    <ProgressBar
-        android:id="@+id/helpFragmentProgress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:indeterminate="true" />
+        <TextView
+            android:id="@+id/tvHelp"
+            style="@style/MoneroText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/header_top"
+            android:autoLink="web"
+            android:gravity="start"
+            android:textSize="14sp"
+            tools:text="@string/menu_help" />
 
-</RelativeLayout>
+    </LinearLayout>
+</ScrollView>
