added EarlOfEgo to credits

--- a/app/src/main/res/values/about.xml
+++ b/app/src/main/res/values/about.xml
@@ -15,7 +15,7 @@
         <b>Credits</b>
         <br/>
         m2049r, baltsar777, rehrar, anhdres,
-        keejef, TheMonera
+        keejef, TheMonera, EarlOfEgo
         <br/><br/>
         <a href="www.xmrujo.com">www.xmrujo.com</a>
         ]]></string>
