--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -75,6 +75,7 @@
                 style="@style/MoneroEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/moneroGray"
                 android:hint="@string/receive_paymentid_hint"
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
