--- a/app/src/main/res/menu/wallet_menu.xml
+++ b/app/src/main/res/menu/wallet_menu.xml
@@ -17,11 +17,10 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_help_sync"
+        android:id="@+id/action_help_wallet"
         android:icon="@drawable/ic_help_white_24dp"
         android:orderInCategory="200"
         android:title="@string/menu_help"
         app:showAsAction="never" />
-
 
 </menu>
