--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -193,6 +193,10 @@
         <item name="android:background">@color/gradientPink</item>
     </style>
 
+    <style name="MoneroButton.ReallySend">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="MoneroButton.Take">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/take</item>
