--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -29,7 +29,7 @@
                 app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
-                    style="@style/MoneroEdit.Medium"
+                    style="@style/MoneroEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/send_address_hint"
